# ChangeLog for app-misc/ktoblzcheck
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.52 2007/11/16 00:33:40 beandog Exp $

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> ktoblzcheck-1.14.ebuild:
  amd64 stable, bug 192840

  28 Oct 2007; Ferris McCormick <fmccor@gentoo.org> ktoblzcheck-1.14.ebuild:
  Sparc stable (bookkeeping); tests pass.

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  ktoblzcheck-1.14.ebuild:
  stable x86, bug 192840

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> ktoblzcheck-1.11.ebuild,
  ktoblzcheck-1.12.ebuild, ktoblzcheck-1.13.ebuild, ktoblzcheck-1.14.ebuild:
  Drop alpha/ia64 keyword, no hardware to test

  19 Sep 2007; Lars Weiler <pylon@gentoo.org> ktoblzcheck-1.14.ebuild:
  Stable on ppc; bug #192840.

*ktoblzcheck-1.14 (01 Aug 2007)

  01 Aug 2007; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.14.ebuild:
  Version bump.

*ktoblzcheck-1.13 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.13.ebuild:
  Version bump.

*ktoblzcheck-1.12 (24 Nov 2006)

  24 Nov 2006; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.12.ebuild:
  Version bump, python support.

  06 Nov 2006; Matti Bickel <mabi@gentoo.org> ktoblzcheck-1.11.ebuild:
  Stable on ppc (bug #149970)

  04 Nov 2006; <blubb@gentoo.org> ktoblzcheck-1.11.ebuild:
  stable on amd64

  19 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  ktoblzcheck-1.11.ebuild:
  Stable on Alpha.

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> ktoblzcheck-1.11.ebuild:
  Mark 1.11 stable on ia64. #149970

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ktoblzcheck-1.11.ebuild:
  Stable on sparc wrt #149970

  09 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ktoblzcheck-1.11.ebuild:
  Stable on x86 wrt bug #149970.

  14 Sep 2006; Danny van Dyk <kugelfang@gentoo.org> ktoblzcheck-1.10.ebuild:
  Marked stable on amd64 wrt bug #146142.
