@@ -1,5 +1,9 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ktoblzcheck-1.11.tar.gz 448354 RMD160 89fa98d327c2665df3f6f6fddd92100c532585ca SHA1 4bde83a30c31e50527bc0c6d501b578d7e277026 SHA256 2b4776629f49eba6696c877ddb6f5c60faa425271ee28a1d497c1a4a7953ea37
 DIST ktoblzcheck-1.14.tar.gz 465738 RMD160 62825d15e27697542d8df7f94113f2889a95c2c4 SHA1 d321169a7c45c743e2d02596a076d2a12ff7e636 SHA256 72b9c3511508a6546a8289e2facaa92990a4031236aee1f0df24b2bc1ac4a36e
+DIST ktoblzcheck-1.16.tar.gz 623672 RMD160 c34f30d70773ce519d1378a6e9891e721d9f88e3 SHA1 4973d7fa52d01cd77f8ad2d095af9b80c9c0343e SHA256 82157458553c706c2a36d26fb304ac27847a8179e6d1952657db02e79723adf4
 EBUILD ktoblzcheck-1.11.ebuild 657 RMD160 859f8396f91bc1d8650b00cf81f54e31e0a0c6ff SHA1 6df976078cfe7bd78ca9f06591785a585a5743db SHA256 e90235bfc352d9b36e0a9b6b4714b4ba3d1ff47940279680353eb4ff95601cec
 MD5 b7eb763aaea8182fe4b3968e917892ec ktoblzcheck-1.11.ebuild 657
 RMD160 859f8396f91bc1d8650b00cf81f54e31e0a0c6ff ktoblzcheck-1.11.ebuild 657
@@ -8,10 +12,14 @@ EBUILD ktoblzcheck-1.14.ebuild 743 RMD160 ae6aaf98c6ab070193a2d85a29cc5f1e74fe44
 MD5 3c5a0b020a14df1cd5d5106c4af53861 ktoblzcheck-1.14.ebuild 743
 RMD160 ae6aaf98c6ab070193a2d85a29cc5f1e74fe44e0 ktoblzcheck-1.14.ebuild 743
 SHA256 0282cf942bc5efe4beabc3e31b790d0a5262f12cb737f87f66e17fddf8bb3bc7 ktoblzcheck-1.14.ebuild 743
-MISC ChangeLog 5909 RMD160 577e04f4351548caa060f0c25d2247caf988e79d SHA1 1d802569152ba3fd33bf71aac1da599bb91bfb7b SHA256 057b0520461559cac5267a29c40bc963e1e2c811e40ddf72d05894d963aa22f3
-MD5 111529807dc5d51b7a469099f67065c5 ChangeLog 5909
-RMD160 577e04f4351548caa060f0c25d2247caf988e79d ChangeLog 5909
-SHA256 057b0520461559cac5267a29c40bc963e1e2c811e40ddf72d05894d963aa22f3 ChangeLog 5909
+EBUILD ktoblzcheck-1.16.ebuild 789 RMD160 8cc8a4b43706f6f4f8cde1e7dda0560b968da6c5 SHA1 977d04937afff31f57820fe8dde0d99e2621bff2 SHA256 fbe0967aa92738d33a4f8b54ab58843641a68afbf853e3232b8e4c1a1627e444
+MD5 346ee8df9c76ed88994696a67781eaca ktoblzcheck-1.16.ebuild 789
+RMD160 8cc8a4b43706f6f4f8cde1e7dda0560b968da6c5 ktoblzcheck-1.16.ebuild 789
+SHA256 fbe0967aa92738d33a4f8b54ab58843641a68afbf853e3232b8e4c1a1627e444 ktoblzcheck-1.16.ebuild 789
+MISC ChangeLog 6029 RMD160 d5f9d2b36208eeb5816e0d9119ef16440b0e7fec SHA1 1c6128da6f416cecebd49016339534e85f2dc5b1 SHA256 5485ff591d480c4f5a775854d3e1bdf8398a54691352ac4b3f5d659d90266e2a
+MD5 d0a643047d08121958ce7c0b29100545 ChangeLog 6029
+RMD160 d5f9d2b36208eeb5816e0d9119ef16440b0e7fec ChangeLog 6029
+SHA256 5485ff591d480c4f5a775854d3e1bdf8398a54691352ac4b3f5d659d90266e2a ChangeLog 6029
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -22,3 +30,13 @@ SHA256 bebf35fd5296468e7f9bdb493b23fd5c6bdd013bec58c28b9991af93597c3c37 files/di
 MD5 403e7adca9448760aebb4cccf0dd8171 files/digest-ktoblzcheck-1.14 250
 RMD160 cb5e99a84bb74828356c5e422793ac42dce8c940 files/digest-ktoblzcheck-1.14 250
 SHA256 5d46973e70e586906635530eac4263aba7bbceb7ba103ba12ac093d6e45cd82e files/digest-ktoblzcheck-1.14 250
+MD5 aa5b670dbf9b0110798eb22aba889261 files/digest-ktoblzcheck-1.16 250
+RMD160 1fb1ced466f18bcb1022de0ff5e0715b095572cc files/digest-ktoblzcheck-1.16 250
+SHA256 6817c7362e7c1a99467929d063d75c099231bba90d95d4b95fcb75d4ad368711 files/digest-ktoblzcheck-1.16 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHQcH6r2QksT29OyARAi1GAJ9DvHPZw0yLZ5TXZZIoU+xEVHboQwCfZSg2
+kWLN5ExZ2ky0HsfkdwkGO4I=
+=8QjD
+-----END PGP SIGNATURE-----
