@@ -1,0 +1,3 @@
+MD5 df8c4f35d8977e78f8445efc1d20a2a8 ktoblzcheck-1.16.tar.gz 623672
+RMD160 c34f30d70773ce519d1378a6e9891e721d9f88e3 ktoblzcheck-1.16.tar.gz 623672
+SHA256 82157458553c706c2a36d26fb304ac27847a8179e6d1952657db02e79723adf4 ktoblzcheck-1.16.tar.gz 623672
