@@ -1,0 +1,26 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ktoblzcheck-1.16.ebuild,v 1.1 2007/11/19 17:03:02 hanno Exp $
+
+DESCRIPTION="Library to check account numbers and bank codes of German banks"
+HOMEPAGE="http://ktoblzcheck.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+IUSE="python"
+
+DEPEND="sys-apps/gawk
+	sys-apps/grep
+	sys-devel/libtool
+	python? ( || ( dev-python/ctypes >=dev-lang/python-2.5 ) )"
+
+src_compile() {
+	econf `use_enable python` || die "configure failed"
+	emake || die "make failed"
+}
+
+src_install() {
+	einstall BANKDATA_PATH="${D}/usr/share/ktoblzcheck" || die "install failed"
+}
