@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/ktoblzcheck
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.52 2007/11/16 00:33:40 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.53 2007/11/19 17:03:02 hanno Exp $
+
+*ktoblzcheck-1.16 (19 Nov 2007)
+
+  19 Nov 2007; Hanno Boeck <hanno@gentoo.org> +ktoblzcheck-1.16.ebuild:
+  Version bump.
 
   16 Nov 2007; Steve Dibb <beandog@gentoo.org> ktoblzcheck-1.14.ebuild:
   amd64 stable, bug 192840
